updates to json

--- a/new-site/package.json
+++ b/new-site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "develop",
+  "name": "new-site",
   "author": "Cas",
   "version": "0.1.0",
   "homepage": "https://defy1x.github.io/",
